# c_monitor_test

./: .gitmodules  CMakeLists.txt
include/: canvas.h  clock.h  fs.h  macros.h  sdl_instance.h  timer.h  types.h
src/: canvas.c  clock.c  fs.c  main.c  sdl_instance.c  timer_sdl.c
src/canvas/: canvas.c  canvas_sdl.c
